--- a/BigProject/Base.lproj/LaunchScreen.storyboard
+++ b/BigProject/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9046" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -31,7 +31,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="79"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <color key="shadowColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <size key="shadowOffset" width="3" height="-1"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -45,52 +45,48 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created by: Group 2 Isabel Laurenceau My Ling Nyguen Michelle Emamdie  " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5x-Tn-Uub">
-                                <rect key="frame" x="197" y="284" width="206" height="140"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="206" id="Ooy-em-FUc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tBh-tc-OfH">
+                                <rect key="frame" x="197" y="247" width="206" height="106"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created by: Group 2 Isabel Laurenceau My Ling Nguyen Michelle Emamdie  " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5x-Tn-Uub">
+                                        <rect key="frame" x="0.0" y="0.0" width="206" height="106"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="206" id="Ooy-em-FUc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="EEV-oi-sGF" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5eL-yP-PYU"/>
                             <constraint firstItem="R1D-IA-ADX" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="127" id="DeZ-ae-fDN"/>
-                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="top" secondItem="R1D-IA-ADX" secondAttribute="bottom" constant="38" id="MjD-Jn-RBN"/>
-                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="centerX" secondItem="R1D-IA-ADX" secondAttribute="centerX" id="Nba-GW-jfv"/>
+                            <constraint firstItem="tBh-tc-OfH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="NDy-BE-Xzv"/>
                             <constraint firstItem="EEV-oi-sGF" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="SOK-8L-rRz"/>
-                            <constraint firstItem="R1D-IA-ADX" firstAttribute="centerX" secondItem="O5x-Tn-Uub" secondAttribute="centerX" id="TPZ-ow-Sn0"/>
                             <constraint firstAttribute="trailing" secondItem="EEV-oi-sGF" secondAttribute="trailing" id="ZA4-Ut-q9m"/>
-                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="top" secondItem="R1D-IA-ADX" secondAttribute="bottom" constant="38" id="ZKn-em-JwM"/>
                             <constraint firstItem="R1D-IA-ADX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="99" id="gNg-jE-fdH"/>
                             <constraint firstItem="R1D-IA-ADX" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="127" id="jrD-G9-Wra"/>
                             <constraint firstItem="EEV-oi-sGF" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="lxE-rO-i2u"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="O5x-Tn-Uub" secondAttribute="bottom" constant="176" id="qB5-P9-6Zi"/>
+                            <constraint firstItem="tBh-tc-OfH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="n6c-Rc-KH5"/>
+                            <constraint firstItem="R1D-IA-ADX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pcW-50-Vu3"/>
                             <constraint firstItem="R1D-IA-ADX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="qBR-W9-1f4"/>
-                            <constraint firstItem="O5x-Tn-Uub" firstAttribute="centerX" secondItem="EEV-oi-sGF" secondAttribute="centerX" id="zuS-Ye-Uz2"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="DeZ-ae-fDN"/>
-                                <exclude reference="TPZ-ow-Sn0"/>
                                 <exclude reference="qBR-W9-1f4"/>
-                                <exclude reference="ZKn-em-JwM"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="constraints">
                                 <include reference="DeZ-ae-fDN"/>
-                                <include reference="TPZ-ow-Sn0"/>
                                 <exclude reference="gNg-jE-fdH"/>
                                 <exclude reference="jrD-G9-Wra"/>
                                 <include reference="qBR-W9-1f4"/>
-                                <exclude reference="MjD-Jn-RBN"/>
-                                <exclude reference="Nba-GW-jfv"/>
-                                <include reference="ZKn-em-JwM"/>
                             </mask>
                         </variation>
                     </view>
